add new init constructors to rowData and RangeData